--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+@import "./fonts.scss";
+
+html,
+body,
+#root {
+  min-height: 100vh;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,5 +14,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: aliceblue;
+  background: linear-gradient(120deg, rgb(4, 8, 14), rgb(10, 10, 15));
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+}
+
+.App {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  h3 {
+    text-align: center;
+    font-family: "Hanson";
+    text-transform: uppercase;
+    font-size: 36px;
+    margin-top: 0;
+    background: -webkit-linear-gradient(120deg, rgb(156, 81, 255), rgb(33, 137, 255));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .input-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
